Fix: product routes match swagger`s
